<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.OtpActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:contentDescription="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="10sp"
            android:id="@+id/back"
            />
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/back"
            android:text="@string/enter_otp"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_medium"
            />

    </RelativeLayout>

    <ImageView
        android:id="@+id/log_logo"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="20sp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        />
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/colorPrimary"
        />


    <TextView
        android:id="@+id/otp_sent_to_txt"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_sent_to_91"
        android:layout_gravity="start"
        android:layout_marginStart="30sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        />


    <EditText
        android:id="@+id/enter_otp"
        android:autofillHints="@string/enter_otp"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:hint="@string/enter_6_digit_otp_here"
        android:drawableEnd="@drawable/ic_phone"
        android:background="@drawable/border"
        />



    <TextView
        android:id="@+id/tv_detecting_otp_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/detecting_otp_60"
        android:layout_marginTop="10sp"
        android:textColor="@color/colorBlack" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/continuee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/continuee"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textAlignment="center"
        android:padding="10sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/send_code_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
       android:visibility="gone"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/send_code_again"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

</LinearLayout>