<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LogRegActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/log_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30sp"
            android:contentDescription="@string/app_name"
       />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/txt_join_studyfi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30sp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/join_study_fi"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/phone_number"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/ic_phone"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/enter_name"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/ic_person"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <EditText
            android:id="@+id/referral_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/paste_code"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/ic_code"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/paste_code"
            android:inputType="text"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/lyt_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_have_referral_code" />
        </LinearLayout>


        <TextView
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:background="@drawable/bg_button_disable"
            android:enabled="false"
            android:fontFamily="@font/poppins_light"
            android:padding="10dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bottom_txt_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_ac" />

            <TextView
                android:id="@+id/bottom_txt_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_up"
                android:textColor="@color/colorAccent"

                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/or"
            android:layout_margin="20dp"
            android:textColor="@color/colorAccent"

            />

        <RelativeLayout
            android:id="@+id/continue_with_google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="35sp"
            android:layout_marginEnd="35sp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/bg_button"
            >

            <TextView
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:visibility="visible"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="10sp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/continue_with_google"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_google" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:id="@+id/google_progress_bar"/>


        </RelativeLayout>

    </LinearLayout>
</ScrollView>