<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>

    <androidx.cardview.widget.CardView
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_20ssp"
        app:cardElevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_12ssp"
        >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvSubTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/scholarship_test_for_neet"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSubTopic"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/tvQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/questions"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvMarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/marks"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/min"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
