<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_20ssp"
        app:cardElevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_12ssp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/tvTestTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/scholarship_test_for_neet"
                android:textSize="@dimen/_12ssp"
                android:layout_toStartOf="@id/tvNum"/>

            <TextView
                android:id="@+id/tvSubTestNumbering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTestTopic"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toStartOf="@id/tvNum"
                android:text="@string/test_s"
                android:textSize="@dimen/_10ssp" />


            <TextView
                android:id="@+id/tvNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_1" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>